# python-solid

./: pyproject.toml
dependency_inversion/: class_bugs.py  reader_config.py  reader_lib.py
interface_segregation/: reading_building_samples.py  test_reading_building_samples.py
liskov_substitution/: avoid_instance.py
open_close_design/: opc_extension.py  test_opc_extension.py
single_responsibility/: GRASP_Patterns.py  test_GRASP_Patterns.py
