[project]
name = "SOLID Python"
version = "2021.8.1"
description = "Learning S. O. L. I. D."
readme = "README.md"
requires-python = ">=3.9.5"
keywords = ["SOLID"]
dependencies = ["toml==0.10.2"]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.20.0
skipsdist = True
[testenv]
description = "Master suite of tests for all modules."
deps =
	pytest==6.2.4
	pytest-cov==2.12.0
	mypy==0.910
	black==21.7b0
	toml==0.10.2

[testenv:folderName]
deps = {[testenv]deps}
changedir = folderName
commands =
	black .
	python -m doctest --option ELLIPSIS folderName/.py
	mypy --strict --python-version 3.9 --show-error-codes .
	python -m doctest --option ELLIPSIS folderName/.py
	pytest folderName/.py
	mypy --strict --python-version 3.9 --show-error-codes .

"""
